# bodega-client

./: CMakeLists.txt
activeclient/: CMakeLists.txt  TODO  active-addons-updater.desktop  active-addons.desktop  bodega-store.desktop
activeclient/package/: Messages.sh  metadata.desktop
activeclient/package/contents/images/: makeplaylive.svgz
activeclient/package/contents/ui/: AccountCreatedPage.qml  ConnectingPage.qml  CreateUser.qml  PasswordPage.qml  SettingsPage.qml  StartPage.qml  main.qml
activeclient/package/contents/ui/components/: Baloon.qml  ExpandingLabel.qml  InlineConfirmationDialog.qml  InlineMessage.qml  PageRow.qml  RatingStars.qml  SimplePage.qml  SlideShow.qml  StoreListItem.qml
activeclient/package/contents/ui/components/private/: SlideShowImplementation.qml
activeclient/package/contents/ui/settings/: AccountHistory.qml  AddPoints.qml  ParticipantPages.qml  ParticipantRatings.qml  PaymentMethod.qml  PaymentMethodEdit.qml  PaymentMethodStack.qml  PaymentMethodView.qml  PaymentMethods.qml  PersonalData.qml
activeclient/package/contents/ui/storebrowser/: AssetColumn.qml  BrowserColumn.qml  BrowserListView.qml  ChannelsColumn.qml  CollectionAssetsColumn.qml  CollectionsColumn.qml  InstallJobsColumn.qml  ItemBrowser.qml  ListBallotAssetsJobColumn.qml  ListBallotsJobColumn.qml  ListCollectionAssetsJobColumn.qml  ListCollectionsJobColumn.qml  OverviewColumn.qml  RatingStars.qml  RatingWidget.qml  Ratings.js  RatingsColumn.qml  TestColumn.qml  UpdatesColumn.qml
activeclient/src/: CMakeLists.txt  Messages.sh  bodegastore.cpp  bodegastore.h  main.cpp
activeclient/src/common/: appbackgroundprovider.cpp  kdeclarativemainwindow.cpp
doc/: json_api
kded_updater/: CMakeLists.txt  Messages.sh  bodegaupdater.desktop  kded_bodegaupdater.desktop  org.kde.BodegaUpdater.xml  updater.cpp  updater.h
lib/: CMakeLists.txt  Messages.sh  bodega.pc.in
lib/bodega/: CMakeLists.txt  CMakeQtUsage  assetbriefsjob.cpp  assetbriefsjob.h  assethandler.cpp  assethandler.h  assethandlerfactory.cpp  assethandlerfactory.h  assetjob.cpp  assetjob.h  assetoperations.cpp  assetoperations.h  assetoperations_p.cpp  assetoperations_p.h  assetratingsjob.cpp  assetratingsjob.h  assetratingsjobmodel.cpp  assetratingsjobmodel.h  assetratingsmodel.cpp  assetratingsmodel.h  ballotaddassetjob.h  ballotlistassetsjob.cpp  ballotlistassetsjob.h  ballotlistassetsjobmodel.cpp  ballotlistassetsjobmodel.h  ballotremoveassetjob.cpp  bodega_types.h  bodegamodel.cpp  bodegamodel.h  changelanguagejob.cpp  changelanguagejob.h  channelsjob.cpp  channelsjob.h  collectionaddassetjob.cpp  collectionaddassetjob.h  collectionassetsmodel.cpp  collectionassetsmodel.h  collectionlistassetsjob.cpp  collectionlistassetsjob.h  collectionlistassetsjobmodel.cpp  (+72 more)
lib/bodega/handlers/: CMakeLists.txt
lib/bodega/handlers/epub/: CMakeLists.txt  bookhandler.cpp  bookhandler.h  bookinstalljob.cpp  bookuninstalljob.cpp  bookuninstalljob.h
lib/bodega/handlers/generic/: filethread.cpp  filethread.h  generichandler.cpp  generichandler.h  genericinstalljob.cpp  genericuninstalljob.cpp  genericuninstalljob.h
lib/bodega/handlers/package/: CMakeLists.txt  packagehandler.cpp  packagehandler.h  packageinstalljob.cpp  packageinstalljob.h  packageuninstalljob.cpp  packageuninstalljob.h
lib/bodega/handlers/rpm/: CMakeLists.txt  packageidinstalljob.cpp  packageidinstalljob.h  rpmhandler.cpp  rpmhandler.h  rpminstalljob.cpp  rpminstalljob.h  rpmuninstalljob.cpp  rpmuninstalljob.h
lib/bodega/handlers/wallpaper/: CMakeLists.txt  wallpaperhandler.cpp  wallpaperhandler.h  wallpaperinstalljob.cpp  wallpaperinstalljob.h  wallpaperuninstalljob.cpp  wallpaperuninstalljob.h
lib/cmake/modules/: CMakeLists.txt  FindBODEGA.cmake
lib/handlers/: CMakeLists.txt
lib/handlers/epub/: CMakeLists.txt  bookhandler.h  bookinstalljob.cpp  bookinstalljob.h  bookuninstalljob.cpp  bookuninstalljob.h  filethread.cpp  filethread.h
lib/handlers/generic/: CMakeLists.txt  filethread.cpp  filethread.h  genericinstalljob.cpp  genericinstalljob.h  genericuninstalljob.cpp  genericuninstalljob.h
lib/handlers/package/: CMakeLists.txt  packagehandler.cpp  packageinstalljob.h  packageuninstalljob.cpp  packageuninstalljob.h
lib/handlers/rpm/: packageidinstalljob.cpp  packageidinstalljob.h  rpmhandler.cpp  rpmhandler.h  rpminstalljob.cpp  rpminstalljob.h  rpmuninstalljob.cpp  rpmuninstalljob.h
lib/handlers/wallpaper/: wallpaperhandler.cpp  wallpaperinstalljob.cpp  wallpaperuninstalljob.cpp  wallpaperuninstalljob.h
lib/scripts/: sql2cpp.py
lib/tests/: CMakeLists.txt
lib/tests/connection/: CMakeLists.txt  main.cpp  tester.cpp  tester.h
lib/tests/jobs/: CMakeLists.txt  dummyserver.cpp  dummyserver.h  gen_responses.py  tst_jobs.cpp  tst_jobs.h
lib/tests/jobs/queries/: 0001_signon.conf  0002_language.conf  0003_channels.conf  0004_assets.conf
lib/tests/jobs/responses/: assets1.txt  assets2.txt  assets3.txt  assets4.txt  assets5.txt  assets6.txt  channels1.txt  channels2.txt  channels3.txt  channels4.txt  channels5.txt  channels6.txt  channels7.txt  language3.txt  signon1.txt  signon2.txt  signon3.txt  signon4.txt  signonsuccess5.txt
lib/tests/model/: CMakeLists.txt  main.cpp  modeltest.cpp  window.cpp  window.h  window.ui
primavera/: CMakeLists.txt  Messages.sh  vivaldi-primavera.desktop
primavera/package/: Messages.sh  metadata.desktop
primavera/package/contents/ui/: main.qml
primavera/src/: CMakeLists.txt  main.cpp
